--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <h3>Made by Raman Kumar</h1>
 <h2>Comming Soon...</h2>
-<h4>This is site for viewing interactive Railway Information with great userinterface.</h4>
+<h4>This is site for viewing my Information with great userinterface.</h4>
